# PA-LLM

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  constants.py  control.py  org.md  paper.md  pyproject.toml  view.py
.github/workflows/: python-app.yml
tests/: 33495752.json  33495752.txt  33495752_summary.txt  pytest.ini  test_control.py  test_view.py
view/: view.py
